# flocalx

./: .gitignore  CITATION.bib  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  test_environment.ipynb
.github/: CONTRIBUTING.md
.github/workflows/: integration.yml
data/rulesets/: german_dt.json  german_dt_test.json
data/rulesets/crisp/: german_dt.json
data/rulesets/fuzzy/: fico_fdt.json  german_fdt.json
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: genetic_api.rst  index.rst  rule_api.rst  utils_api.rst
docs/source/devel/: contributing.rst  dependencies.rst  development_setup.rst  documenting_flocalx.rst  index.rst  testing.rst
docs/source/users/: index.rst
docs/source/users/faq/: index.rst  troubleshooting_faq.rst
docs/source/users/getting_started/: index.rst
docs/source/users/installing/: index.rst
docs/source/users/project/: citing.rst
flocalx/: __init__.py
flocalx/genetic/: __init__.py  _chromosome.py  _genetic.py
flocalx/rule/: __init__.py  _rule.py  _ruleset.py
src/flocalx/: __init__.py
src/flocalx/genetic/: __init__.py  _chromosome.py  _genetic.py
src/flocalx/rule/: __init__.py  _rule.py  _ruleset.py
src/flocalx/utils/: __init__.py  _base.py  _fuzzy_set.py
