[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flocalx"
requires-python = ">=3.9"
description = "Local to global explanations using fuzzy logic."
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    "numpy",
    "scikit-learn",
]
authors = [
    {name = "Guillermo Tom치s Fern치ndez Martin", email = "Guillermo.Fernandez@uclm.es"}
]
maintainers = [
    {name = "Guillermo Tom치s Fern치ndez Martin", email = "Guillermo.Fernandez@uclm.es"}
]

[tool.pytest.ini_options]
# addopts = ["--disable-pytest-warnings -rxXs"]
addopts = ["-rxXs"]

[tool.coverage.run]
dynamic_context = "test_function"

[tool.setuptools.dynamic]
version = {attr = "flocalx.__version__"}