[metadata]
name = flocalx
version = attr: flocalx.__version__
author = Guillermo Tom치s Fern치ndez Martin
author_email = Guillermo.Fernandez@uclm.es
maintainer = Guillermo Tom치s Fern치ndez Martin
maintainer_email = Guillermo.Fernandez@uclm.es
license = MIT
license_file = LICENSE
description = Local to global explanations using fuzzy logic.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires = 
    numpy

packages=
    flocalx

[flake8]
max-line-length=120
exclude = 
    .git,
    __pycache__,
    data,
    docs/*

[tool:pytest]
addopts =
    # TODO: Remove and activate the "disable-pytest-warnings" and
    # "doctest-modules" flags when the modules have been reviewed
    --disable-pytest-warnings
    # --doctest-modules
    -rxXs
